# rd-mcp

./: .gitignore  LICENSE
.kiro/specs/rust-docs-search/: design.md  requirements.md  tasks.md
.kiro/steering/: mcp-configuration.md  python-mcp-server.md
rust_docs_mcp_server/: README.md  pyproject.toml
rust_docs_mcp_server/src/rust_docs_mcp_server/: __init__.py  server.py
rust_docs_mcp_server/src/rust_docs_mcp_server/tools/: __init__.py  search_tools.py
rust_docs_mcp_server/src/rust_docs_mcp_server/utils/: __init__.py  config.py
rust_docs_mcp_server/tests/: __init__.py  test_config.py  test_server.py
